# KabumCrawler

./: .gitignore  README.md  pyproject.toml  runner.py
crawler/: settings.py
crawler/models/: __init__.py  category.py  home.py  product.py  response_model.py
crawler/sitemap/: __init__.py  dataclasses.py  sitemap.toml
crawler/spiders/: product_flow_spider.py  update_product_spider.py
